# p8

./: .clang-format  .code_format.json  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  _cmake.bat  _cmake.sh
.claude/agents/: opponent.md
.claude/rules/: p8-code-style.md  p8-format-before-commit.md  p8-prefer-kit.md
.claude/skills/p8-error-cleanup/: SKILL.md
.cursor/: settings.json
.cursor/rules/: p8-code-style.mdc  p8-format-before-commit.mdc  p8-prefer-kit.mdc  p8-project.mdc
.cursor/skills/p8-code-style/: SKILL.md
.cursor/skills/p8-error-cleanup/: SKILL.md
.cursor/skills/p8-prefer-kit/: SKILL.md
api/: CMakeLists.txt  TsHelpers.h  p8_client_api.h  p8_config.h  p8_protocol.h  p8clientApi.h  ts_helpers.h
dep/: CMakeLists.txt
dep/lib_kit/: CMakeLists.txt  kt.cpp  list.hpp  plasma.hpp  spin_lock.hpp
doc/: CMakeLists.txt  Design.vsdx  code_style.md  commit_conventions.md  config_example.json  serializer_optimization.md  todo.md
engine/: CMakeLists.txt  p8_buffer_pool.cpp  p8_buffer_pool.hpp  p8_config.cpp  p8_config_keys.hpp  p8_core.cpp  p8_core.hpp  p8_hash.hpp  p8_log.cpp  p8_log.hpp  p8_memory_budget.cpp  p8_memory_budget.hpp  p8_mtk.cpp  p8_mtk.hpp  p8_static_checks.cpp  p8_tls_writer.cpp  p8_tls_writer.hpp  p8_trc.cpp  p8_trc.hpp  p8_xxh.hpp  p8client.cpp
examples/: config.json
scripts/: cmake_build.py  code_format.py  test_code_format.py
scripts/git_hooks/: pre-commit
tests/regression/: CMakeLists.txt  main.cpp  p8_attr_test.cpp  p8_buffer_pool_test.cpp  p8_config_test.cpp  p8_core_test.cpp  p8_log_content_test.cpp  p8_log_format_test.cpp  p8_log_fragment_test.cpp  p8_log_perf_test.cpp  p8_memory_budget_test.cpp  p8_svc_serialize_test.cpp  p8_writer_registry_test.cpp  p8_xxh_test.cpp
tests/regression/lib_kit/: list_test.hpp  spin_lock_test.hpp
